# pca-eval

./: .pypirc  LICENSE  README.md  __init__.py  pbmc_example.ipynb  requirements.txt  setup.cfg  tutorial.ipynb  validations.ipynb  workflow.ipynb
pcaeval/: __init__.py  pca_eval.py
