[metadata]
name = pca-eval
version = 0.1.0.0
author = Davi Sidarta-Oliveira
author_email = davisidarta@gmail.com
description = A simple package to evaluate PCA performance with a focus in single-cell genomics data.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/davisidarta/pca-eval
project_urls =
    Bug Tracker = https://github.com/davisidarta/pca-eval/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
[options]
packages = find:
python_requires = >=3.6

